implement get player cards and deal-card
